--- a/app/client/index.pug
+++ b/app/client/index.pug
@@ -7,12 +7,8 @@ html(lang='en').wjs-MobileHeightFix
     title Document
   body
     .body-inner
-      ul#pages-list
+      ul#pages-list(style="padding: 20px")
         li: p here are links to application pages:
-        li
-          a(href="html/temp-fonts.html") fonts.html
-        li
-          a(href="html/temp-icons.html") icons.html
         li
           a(href="html/login.html") login.html
         li
@@ -23,3 +19,11 @@ html(lang='en').wjs-MobileHeightFix
           a(href="html/chat_mono.html") chat_mono.html
         li
           a(href="html/chat_group.html") chat_group.html
+        li
+          a(href="html/contactslist.html") contactslist.html
+        li
+          a(href="html/user-card.html") user-card.html
+        li
+          a(href="html/menu.html") menu.html
+        li
+          a(href="html/settings.html") settings.html
