--- a/app/client/scss/login.scss
+++ b/app/client/scss/login.scss
@@ -1,7 +1,7 @@
-@import "reset";
-@import "fonts";
-@import "general";
-@import "wMobileHeightFix";
+// @import "reset";
+// @import "fonts";
+// @import "general";
+// @import "wMobileHeightFix";
 
 .login-header {
   width: 100%;
