--- a/app/client/modules/logo/logo.scss
+++ b/app/client/modules/logo/logo.scss
@@ -7,8 +7,6 @@
   position: relative;
   margin-right: 10px;
   &__name {
-    height: 100%;
-    width: 100%;
     position: absolute;
     z-index: 1;
     top: 50%;
@@ -16,8 +14,6 @@
     transform: translate(-50%,-50%);
     color: springgreen;
     font: 1.3em bold;
-    text-align: center;
-    padding-top: 5px;
   }
   &__img {
     max-width: 100%;
@@ -28,5 +24,21 @@
     left: 50%;
     transform: translate(-50%,-50%);
     border-radius: 50%;
+  }
+  &__status {
+    height: 10px;
+    width: 10px;
+    border: 1px solid transparent;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 3;
+    right: 0;
+    bottom: 0;
+    &_online {
+      background-color: springgreen;
+    }
+    &_offline {
+      background-color: red;
+    }
   }
 }
