--- a/app/client/pug/register.pug
+++ b/app/client/pug/register.pug
@@ -3,8 +3,9 @@ html(lang='en').wjs-MobileHeightFix
   head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    link(rel='stylesheet' type='text/css' href='../css/main.css')
     link(rel='stylesheet' type='text/css' href='../css/login.css')
-    title Document
+    title Register
   body
     .body-inner
 
