--- a/app/client/scss/index.scss
+++ b/app/client/scss/index.scss
@@ -1,18 +1,18 @@
-@import "reset";
-@import "fonts";
-@import "general";
-@import "wMobileHeightFix";
+// @import "reset";
+// @import "fonts";
+// @import "general";
+// @import "wMobileHeightFix";
 
-#pages-list {
-  padding: 50px 0;
-  color: #40E0D0;
-  p {
-    font: 2em deco;
-    padding-bottom: 20px;
-    letter-spacing: 2px;
-  }
-  a {
-    font: 1.2em reg;
-    line-height: 2em;
-  }
-}
+// #pages-list {
+//   padding: 50px 0;
+//   color: #40E0D0;
+//   p {
+//     font: 2em deco;
+//     padding-bottom: 20px;
+//     letter-spacing: 2px;
+//   }
+//   a {
+//     font: 1.2em reg;
+//     line-height: 2em;
+//   }
+// }
