--- a/app/client/scss/menu.scss
+++ b/app/client/scss/menu.scss
@@ -4,16 +4,20 @@
 // @import "wMobileHeightFix";
 
 // @import "../modules/logo/logo";
-// @import "../modules/chat-list/chat-list";
-// @import "../modules/message-status/message-status";
 // @import "../modules/header/header";
-// @import "../modules/round-button/round-button";
-// @import "../modules/chat-form/chat-form";
-
-// @import "../libs-css/wScroll";
 
 // .main {
 //   height: calc(100% - 60px);
 //   overflow: hidden;
 //   position: relative;
+  .menu-list {
+    padding: 20px 10px;
+    &__item {
+      padding: 10px;
+      border-bottom: 1px solid #5f9ea0;
+      font: 1.2em reg;
+      color: #40E0D0;
+      text-shadow: 1px 1px 2px #003344;
+    }
+  }
 // }
