--- a/app/client/modules/message-status/message-status.scss
+++ b/app/client/modules/message-status/message-status.scss
@@ -1,7 +1,8 @@
 .message-status {
+  position: absolute;
   i {
     font-family: ElegantIcons;
-    color: grey;
+    color: $gr;
     display: none;
     &:first-of-type {
       position: relative;
