--- a/app/client/pug/settings.pug
+++ b/app/client/pug/settings.pug
@@ -1,12 +1,5 @@
 doctype html
-html(lang='en').wjs-MobileHeightFix
-  head
-    meta(charset='UTF-8')
-    meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet' type='text/css' href='../css/main.css')
-    link(rel='stylesheet' type='text/css' href='../css/menu.css')
-    title Settings
-  body
+html(lang='en').wjs-Mob
     .body-inner
 
       header.header
