--- a/app/client/scss/_general.scss
+++ b/app/client/scss/_general.scss
@@ -9,7 +9,7 @@ a, a:hover {
 }
 
 body {
-  background-image: linear-gradient(#003344, #008079, #40E0D0);
+  background-image: linear-gradient($c44, $c79, $d0);
 }
 .body-inner {
   height: 100%;
