--- a/app/client/scss/main.scss
+++ b/app/client/scss/main.scss
@@ -1,3 +1,4 @@
+@import "constants";
 @import "reset";
 @import "fonts";
 @import "general";
@@ -11,6 +12,7 @@
 @import "../modules/round-button/round-button";
 @import "../modules/chat-form/chat-form";
 
+
 @import "../libs-css/wScroll";
 
 .main {
@@ -18,3 +20,14 @@
   overflow: hidden;
   position: relative;
 }
+
+
+@import "user-card";
+@import "menu";
+@import "login";
+@import "contactslist";
+@import "chatlist";
+@import "chat-messages";
+
+
+@import "themes";
