--- a/app/client/modules/chat-list/chat-list.scss
+++ b/app/client/modules/chat-list/chat-list.scss
@@ -6,7 +6,7 @@
     display                          : flex;
     align-items                      : flex-end;
     justify-content                  : center;
-    @media (min-width: 1200px) {
+    @media (min-width: $bpl) {
       padding                        : 0px;
     }
     &_date {
@@ -46,11 +46,11 @@
   &_mono {
     .chat-list__item {
       &_sent {
-        @media (min-width              : 900px) {
+        @media (min-width              : $bpm) {
           justify-content              : flex-start;
         }
         .chat-list__message {
-          @media (min-width: 900px) {
+          @media (min-width: $bpm) {
             border-bottom-right-radius : 10px 10px;
             border-bottom-left-radius  : 0 0;
           }
@@ -58,7 +58,7 @@
       }
       .logo {
         display                        : none;
-        @media (min-width: 900px) {
+        @media (min-width: $bpm) {
           display                      : block;
         }
       }
