--- a/app/client/modules/header/header.scss
+++ b/app/client/modules/header/header.scss
@@ -1,12 +1,12 @@
 .header {
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid steelblue;
+  border-bottom: 1px solid $sb;
   padding: 0 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  @media (min-width: 900px) {
+  @media (min-width: $bpm) {
     padding: 0px;
   }
   &__menu-btn {
@@ -20,7 +20,7 @@
     cursor: pointer;
     i {
       font-family: ElegantIcons;
-      color: steelblue;
+      color: $sb;
       position: absolute;
       z-index: 1;
       top: 50%;
@@ -40,7 +40,7 @@
     align-items: center;
   }
   &__text-wrapper {
-    color: #40E0D0;
+    color: $d0;
   }
   &__header {
     font: 1.2em reg;
