--- a/app/client/pug/contactslist.pug
+++ b/app/client/pug/contactslist.pug
@@ -4,7 +4,7 @@ html(lang='en').wjs-MobileHeightFix
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet' type='text/css' href='../css/main.css')
-    link(rel='stylesheet' type='text/css' href='../css/contactslist.css')
+    //- link(rel='stylesheet' type='text/css' href='../css/contactslist.css')
     script(defer src='../libs-js/wScroll.js')
     title ContactsList
   body
