--- a/app/client/pug/login.pug
+++ b/app/client/pug/login.pug
@@ -4,7 +4,7 @@ html(lang='en').wjs-MobileHeightFix
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet' type='text/css' href='../css/main.css')
-    link(rel='stylesheet' type='text/css' href='../css/login.css')
+    //- link(rel='stylesheet' type='text/css' href='../css/login.css')
     title Login
   body
     .body-inner
