--- a/app/client/scss/contactslist.scss
+++ b/app/client/scss/contactslist.scss
@@ -1,41 +1,17 @@
-// @import "reset";
-// @import "fonts";
-// @import "general";
-// @import "wMobileHeightFix";
-
-// @import "../modules/logo/logo";
-// @import "../modules/header/header";
-// @import "../modules/message-status/message-status";
-// @import "../modules/round-button/round-button";
-
-// @import "../libs-css/wScroll";
-
-// .main {
-//   height: calc(100% - 60px);
-//   overflow-y: hidden;
-
-  .contact-list {
-    .message-status {
-      position: absolute;
-      bottom: 5px;
-      right: 10px;
-    }
-  }
-  .contact-item {
-    display: flex;
-    align-items: center;
+.contact-item {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  overflow: hidden;
+  position: relative;
+  &__name {
+    color: $d0;
+    border-bottom: 1px solid $cb;
     padding: 5px;
-    overflow: hidden;
-    position: relative;
-    &__name {
-      color: #40E0D0;
-      border-bottom: 1px solid CadetBlue;
-      padding: 5px;
-      flex-grow: 1;
-      width: calc(100% - 100px);
-      height: 50px;
-      font: 1.2em reg;
-      text-shadow: 1px 1px 2px #003344;
-    }
+    flex-grow: 1;
+    width: calc(100% - 100px);
+    height: 50px;
+    font: 1.2em reg;
+    text-shadow: 1px 1px 2px $c44;
   }
-// }
+}
