--- a/app/client/scss/menu.scss
+++ b/app/client/scss/menu.scss
@@ -1,23 +1,10 @@
-// @import "reset";
-// @import "fonts";
-// @import "general";
-// @import "wMobileHeightFix";
-
-// @import "../modules/logo/logo";
-// @import "../modules/header/header";
-
-// .main {
-//   height: calc(100% - 60px);
-//   overflow: hidden;
-//   position: relative;
-  .menu-list {
-    padding: 20px 10px;
-    &__item {
-      padding: 10px;
-      border-bottom: 1px solid #5f9ea0;
-      font: 1.2em reg;
-      color: #40E0D0;
-      text-shadow: 1px 1px 2px #003344;
-    }
+.menu-list {
+  padding: 20px 10px;
+  &__item {
+    padding: 10px;
+    border-bottom: 1px solid $d0;
+    font: 1.2em reg;
+    color: $d0;
+    text-shadow: 1px 1px 2px $c44;
   }
-// }
+}
