--- a/app/client/scss/user-card.scss
+++ b/app/client/scss/user-card.scss
@@ -1,39 +1,25 @@
-// @import "reset";
-// @import "fonts";
-// @import "general";
-// @import "wMobileHeightFix";
-
-// @import "../modules/logo/logo";
-// @import "../modules/header/header";
-// @import "../modules/round-button/round-button";
-
-// .main {
-//   height: calc(100% - 60px);
-//   overflow: hidden;
-//   position: relative;
-  .logo.logo_user-card {
-    width: 120px;
-    height: 120px;
-    margin: 100px auto 50px;
-    .logo__name {
-      font-size: 3em;
-    }
+.logo.logo_user-card {
+  width: 120px;
+  height: 120px;
+  margin: 100px auto 50px;
+  .logo__name {
+    font-size: 3em;
   }
-  .user-info {
-    text-align: center;
-    &__name {
-      padding-bottom: 10px;
-      font: 2em deco;
-    }
-    &__id {
-      padding-bottom: 10px;
-      font: 1.2em reg;
-      color:#40E0D0;
-      letter-spacing: 1px;
-    }
-    &__status {
-      padding-bottom: 10px;
-      font: 1em light;
-    }
+}
+.user-info {
+  text-align: center;
+  &__name {
+    padding-bottom: 10px;
+    font: 2em deco;
   }
-// }
+  &__id {
+    padding-bottom: 10px;
+    font: 1.2em reg;
+    color: $d0;
+    letter-spacing: 1px;
+  }
+  &__status {
+    padding-bottom: 10px;
+    font: 1em light;
+  }
+}
