--- a/app/client/index.pug
+++ b/app/client/index.pug
@@ -4,6 +4,7 @@ html(lang='en').wjs-MobileHeightFix
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet' type='text/css' href='css/index.css')
+    link(rel='icon', href='img/logo.png')
     title Document
   body
     .body-inner
@@ -14,16 +15,11 @@ html(lang='en').wjs-MobileHeightFix
         li
           a(href="html/register.html") register.html
         li
-          a(href="html/chatlist.html") chatlist.html
-        li
-          a(href="html/chat_mono.html") chat_mono.html
-        li
-          a(href="html/chat_group.html") chat_group.html
-        li
-          a(href="html/contactslist.html") contactslist.html
-        li
           a(href="html/user-card.html") user-card.html
         li
-          a(href="html/menu.html") menu.html
-        li
-          a(href="html/settings.html") settings.html
+          a(href="html/app.html") app.html
+
+    style.
+      li {
+        padding: 10px 0;
+      }
