--- a/app/client/pug/login.pug
+++ b/app/client/pug/login.pug
@@ -7,7 +7,7 @@ html(lang='en').wjs-MobileHeightFix
     //- link(rel='stylesheet' type='text/css' href='../css/login.css')
     title Login
   body
-    .body-inner
+    .body-inner.body-inner_notSignedPage
 
       header.login-header
         nav.login-header__nav
