--- a/app/client/pug/user-card.pug
+++ b/app/client/pug/user-card.pug
@@ -25,13 +25,11 @@ html(lang='en').wjs-MobileHeightFix
           //- i &#x35;
       main.main
         .logo.logo_user-card
-          p.logo__name UN
+          p.logo__name PR
           //- img.logo__img(src="../img/users/user1.jpg")
         .user-info
           .user-info__name Philomena Resendez
           .user-info__id @philomenaRezzz
           .user-info__status в контактах
 
-        //- button(type="button" style="bottom: 60px").round-btn: i &#x4c;
-        button(type="button" style="bottom: 60px").round-btn: i &#x4b;
         button(type="button").round-btn: i &#x6a;
