--- a/app/client/modules/chat-form/chat-form.scss
+++ b/app/client/modules/chat-form/chat-form.scss
@@ -2,6 +2,12 @@
   display: flex;
   align-items: end;
   border-top: 1px solid $db;
+  position: absolute;
+  z-index: 2;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: $d0;
   &__textarea {
     margin: 0;
     flex-grow: 1;
@@ -10,8 +16,11 @@
     padding: 8px;
     background-color: transparent;
     font: 1em reg;
+    color: #003344;
+    transition: height .3s;
     &_active {
       height: 200px;
+      transition: height .3s;
     }
   }
   &__btn {
