--- a/app/client/modules/contactlist/contactlist.scss
+++ b/app/client/modules/contactlist/contactlist.scss
@@ -1,7 +1,7 @@
 .contact-item {
   display: flex;
   align-items: center;
-  padding: 5px;
+  cursor: pointer;
   overflow: hidden;
   position: relative;
   &__name {
