--- a/app/client/modules/header/header.pug
+++ b/app/client/modules/header/header.pug
@@ -1,5 +1,5 @@
 header.header
-  button(type="button").header__menu-btn.header__menu-btn_primary
+  button(type="button" data-target-group="aside" data-target="menu").header__menu-btn.header__menu-btn_primary
     i(style='font-size: 30px') &#x61;
   .header__info
     .logo
@@ -8,7 +8,6 @@ header.header
     .header__text-wrapper
       h1.header__header User Name
       h4.header__subheader @hereIsId1239ddfv
+  input(type="text").header__search
   button(type="button").header__menu-btn.header__menu-btn_secondary
-    i(style='font-size: 30px') &#x4a;
-    //- i &#x4a;
-    //- i &#x35;
+    i(style='font-size: 25px') &#x55;
