--- a/app/client/scss/_general.scss
+++ b/app/client/scss/_general.scss
@@ -10,13 +10,5 @@ a, a:hover {
 
 body {
   background-image: linear-gradient($c44, $c79, $d0);
-}
-.body-inner {
-  height: 100%;
-  max-width: 1200px;
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
+  font-family: light;
 }
