--- a/app/client/pug/login.pug
+++ b/app/client/pug/login.pug
@@ -16,6 +16,19 @@ html(lang='en').wjs-MobileHeightFix
               a.login-header__link.login-header__link_active(href='/login') вхід
             li
               a.login-header__link(href='/register') реєстрація
+        .lang-switcher
+          .lang-switcher__img-wrapper
+            img.lang-switcher__img(src="../img/ukraine.png")
+          i &#x33;
+          .lang-switcher__list
+            .lang-switcher__list-item
+              .lang-switcher__img-wrapper
+                img.lang-switcher__img(src="../img/ukraine.png")
+              span.lang-switcher__name укр
+            .lang-switcher__list-item
+              .lang-switcher__img-wrapper
+                img.lang-switcher__img(src="../img/united_kingdom.png")
+              span.lang-switcher__name eng
       main.login-main
         h1 My-cha-cha
         h4 вільний веб-чат
