--- a/app/client/modules/usercard/usercard.scss
+++ b/app/client/modules/usercard/usercard.scss
@@ -1,7 +1,7 @@
 .logo.logo_user-card {
   width: 120px;
   height: 120px;
-  margin: 100px auto 50px;
+  margin: 20px auto;
   .logo__name {
     font-size: 3em;
   }
@@ -9,17 +9,11 @@
 .user-info {
   text-align: center;
   &__name {
-    padding-bottom: 10px;
     font: 2em deco;
   }
   &__id {
-    padding-bottom: 10px;
-    font: 1.2em reg;
+    font: 1em reg;
     color: $d0;
     letter-spacing: 1px;
-  }
-  &__status {
-    padding-bottom: 10px;
-    font: 1em light;
   }
 }
