--- a/app/client/scss/_general.scss
+++ b/app/client/scss/_general.scss
@@ -8,6 +8,10 @@ a, a:hover {
   cursor           : pointer;
 }
 
+i {
+  font-family: ElegantIcons;
+}
+
 body {
   background-image: linear-gradient($c44, $c79, $d0);
   font-family: light;
