--- a/app/client/scss/main.scss
+++ b/app/client/scss/main.scss
@@ -14,6 +14,7 @@
 @import "../modules/chatlist/chatlist";
 @import "../modules/contactlist/contactlist";
 @import "../modules/chat/chat";
+@import "../modules/usercard/usercard";
 
 @import "../libs-css/wScroll";
 
@@ -24,7 +25,7 @@
 }
 
 @import "layout";
-@import "user-card";
+@import "card-menu";
 @import "login";
 @import "chat-messages";
 
