шкури для попапів

--- a/app/client/modules/groupcard/groupcard.pug
+++ b/app/client/modules/groupcard/groupcard.pug
@@ -14,10 +14,10 @@ ul.card-menu
     button(type="button") подивитися учасників
   li
     p з адмін. правами:
-    button(type="button") додати до групи
+    button(type="button") редагувати групу
   li
     button(type="button") видалити групу
   li
     button(type="button") очистити історію
 
-button(type="button").round-btn: i &#x6a;
+button(type="button").round-btn: i.ico &#x6a;
