--- a/app/client/modules/usercard/usercard.pug
+++ b/app/client/modules/usercard/usercard.pug
@@ -19,4 +19,4 @@ ul.card-menu
   li
     button(type="button") очистити історію
 
-button(type="button").round-btn: i &#x6a;
+button(type="button").round-btn: i.ico &#x6a;
