--- a/app/client/pug/app.pug
+++ b/app/client/pug/app.pug
@@ -37,9 +37,9 @@ html(lang='en').wjs-MobileHeightFix
                 include ../modules/chat-form/chat-form.pug
 
       .right-side
-        p.right-side__info Виберіть чат або контакт і почніть спілкування
+        //- p.right-side__info Виберіть чат або контакт і почніть спілкування
 
-        //- include ../modules/subheader/subheader.pug
+        include ../modules/subheader/subheader.pug
         //- .chat-wrapper.wjs-scroll(data-scroll='right')
         //-   .wjs-scroll__content-wrapper
         //-     .wjs-scroll__content
@@ -49,3 +49,5 @@ html(lang='en').wjs-MobileHeightFix
 
         //- include ../modules/usercard/usercard.pug
         //- include ../modules/groupcard/groupcard.pug
+
+    include ../modules/popups/popups.pug
