--- a/app/client/scss/main.scss
+++ b/app/client/scss/main.scss
@@ -15,6 +15,7 @@
 @import "../modules/contactlist/contactlist";
 @import "../modules/chat/chat";
 @import "../modules/usercard/usercard";
+@import "../modules/popups/popups";
 
 @import "../libs-css/wScroll";
 
