--- a/app/client/modules/chat/chat.pug
+++ b/app/client/modules/chat/chat.pug
@@ -15,8 +15,8 @@
 //-       .chat-list__message-date 12.34
 //-       .message-status.message-status_read
 //-       //- .message-status.message-status_delivered
-//-         i &#x4e;
-//-         i &#x4e;
+//-         i.ico &#x4e;
+//-         i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_received
 //-     .logo
@@ -38,8 +38,8 @@
       .chat-list__message-text outwill microconidial sciarid
       .chat-list__message-date 22.54
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_received
     .logo
@@ -65,8 +65,8 @@
       .chat-list__message-text polyamide
       .chat-list__message-date 23.00
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_date 13.03.2021, сб
 //- 
@@ -86,8 +86,8 @@
       .chat-list__message-text stridhan fulminator transgressing monoplacular fetal prevolunteer beauteously dissent steganogram diluvianism Criniger
       .chat-list__message-date 23.01
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_sent
     .logo
@@ -97,8 +97,8 @@
       .chat-list__message-text floriparous contrariousness  unfocused consentaneous epulary secularizer spinae Scotchiness
       .chat-list__message-date 23.03
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_date 15.03.2021, пн
 //- 
@@ -118,8 +118,8 @@
       .chat-list__message-text oleostearate uproar lenticulate
       .chat-list__message-date 13.15
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_received
     .logo
@@ -137,8 +137,8 @@
       .chat-list__message-text unfrightful  pergameneous Iacchos Konstantinos fair thioarsenite geomorphology leatherworking panache demonstrability arterioplasty yeomanhood
       .chat-list__message-date 13.45
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_sent
     .logo
@@ -148,8 +148,8 @@
       .chat-list__message-text superglottal seroimmunity Bysacki roguedom stationmaster isoantibody scribblingly freeholder diagnosable ooglea heritance Paulite quercitrin plethorous annoyance unvibrating violon molybdenum philosophicojuristic arapunga besaint surculus pneumomalacia tabernacler
       .chat-list__message-date 13.54
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_received
     .logo
@@ -185,8 +185,8 @@
       .chat-list__message-text rebukeful squeeze czar aretaics loiter
       .chat-list__message-date 09.12
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_received
     .logo
@@ -204,8 +204,8 @@
       .chat-list__message-text undervaluingly
       .chat-list__message-date 12.43
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_sent
     .logo
@@ -215,8 +215,8 @@
       .chat-list__message-text uncommodiously trimesitinice
       .chat-list__message-date 12.55
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_received
     .logo
@@ -258,8 +258,8 @@
       .chat-list__message-text blindfoldly nonmicroscopical anticryptic monologist
       .chat-list__message-date 15.55
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 //- 
 //-   li.chat-list__item.chat-list__item_sent
     .logo
@@ -269,8 +269,8 @@
       .chat-list__message-text symbolization
       .chat-list__message-date 15.56
       .message-status.message-status_delivered
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
 ul.chat-list.chat-list_group
   li.chat-list__item.chat-list__item_date 12.03.2021, пт
@@ -283,8 +283,8 @@ ul.chat-list.chat-list_group
       .chat-list__message-text outwill microconidial sciarid
       .chat-list__message-date 22.54
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
   li.chat-list__item.chat-list__item_received
     .logo
@@ -310,8 +310,8 @@ ul.chat-list.chat-list_group
       .chat-list__message-text polyamide
       .chat-list__message-date 23.00
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
   li.chat-list__item.chat-list__item_date 13.03.2021, сб
 
@@ -331,8 +331,8 @@ ul.chat-list.chat-list_group
       .chat-list__message-text stridhan fulminator transgressing monoplacular fetal prevolunteer beauteously dissent steganogram diluvianism Criniger
       .chat-list__message-date 23.01
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
   li.chat-list__item.chat-list__item_sent
     .logo
@@ -342,8 +342,8 @@ ul.chat-list.chat-list_group
       .chat-list__message-text floriparous contrariousness  unfocused consentaneous epulary secularizer spinae Scotchiness
       .chat-list__message-date 23.03
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
   li.chat-list__item.chat-list__item_date 15.03.2021, пн
 
@@ -363,8 +363,8 @@ ul.chat-list.chat-list_group
       .chat-list__message-text oleostearate uproar lenticulate
       .chat-list__message-date 13.15
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
   li.chat-list__item.chat-list__item_received
     .logo
@@ -382,8 +382,8 @@ ul.chat-list.chat-list_group
       .chat-list__message-text unfrightful  pergameneous Iacchos Konstantinos fair thioarsenite geomorphology leatherworking panache demonstrability arterioplasty yeomanhood
       .chat-list__message-date 13.45
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
   li.chat-list__item.chat-list__item_sent
     .logo
@@ -393,8 +393,8 @@ ul.chat-list.chat-list_group
       .chat-list__message-text superglottal seroimmunity Bysacki roguedom stationmaster isoantibody scribblingly freeholder diagnosable ooglea heritance Paulite quercitrin plethorous annoyance unvibrating violon molybdenum philosophicojuristic arapunga besaint surculus pneumomalacia tabernacler
       .chat-list__message-date 13.54
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
   li.chat-list__item.chat-list__item_received
     .logo
@@ -430,8 +430,8 @@ ul.chat-list.chat-list_group
       .chat-list__message-text rebukeful squeeze czar aretaics loiter
       .chat-list__message-date 09.12
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
   li.chat-list__item.chat-list__item_received
     .logo
@@ -449,8 +449,8 @@ ul.chat-list.chat-list_group
       .chat-list__message-text undervaluingly
       .chat-list__message-date 12.43
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
   li.chat-list__item.chat-list__item_sent
     .logo
@@ -460,8 +460,8 @@ ul.chat-list.chat-list_group
       .chat-list__message-text uncommodiously trimesitinice
       .chat-list__message-date 12.55
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
   li.chat-list__item.chat-list__item_received
     .logo
@@ -503,8 +503,8 @@ ul.chat-list.chat-list_group
       .chat-list__message-text blindfoldly nonmicroscopical anticryptic monologist
       .chat-list__message-date 15.55
       .message-status.message-status_read
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
 
   li.chat-list__item.chat-list__item_sent
     .logo
@@ -514,5 +514,5 @@ ul.chat-list.chat-list_group
       .chat-list__message-text symbolization
       .chat-list__message-date 15.56
       .message-status.message-status_delivered
-        i &#x4e;
-        i &#x4e;
+        i.ico &#x4e;
+        i.ico &#x4e;
