--- a/app/client/modules/chatlist/chatlist.pug
+++ b/app/client/modules/chatlist/chatlist.pug
@@ -11,8 +11,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge.chat-item__badge_active 12
     .message-status.message-status_delivered
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -25,8 +25,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -39,8 +39,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge.chat-item__badge_active 7
     .message-status.message-status_delivered
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -53,8 +53,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge.chat-item__badge_active 374
     .message-status.message-status_delivered
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -67,8 +67,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -81,8 +81,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -95,8 +95,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -109,8 +109,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -123,8 +123,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge.chat-item__badge_active 1
     .message-status.message-status_delivered
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -137,8 +137,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -151,8 +151,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -165,8 +165,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -179,8 +179,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -193,8 +193,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge.chat-item__badge_active 4
     .message-status.message-status_delivered
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -207,8 +207,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -221,8 +221,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -235,8 +235,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -249,8 +249,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -263,8 +263,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -277,8 +277,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -291,8 +291,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -305,8 +305,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -319,8 +319,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -333,8 +333,8 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge
     .message-status.message-status_read
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
 
   li.chat-item
     .logo
@@ -347,5 +347,5 @@ ul.chat-list
     .chat-item__date 24.07.21
     .chat-item__badge.chat-item__badge_active 12863
     .message-status.message-status_delivered
-      i &#x4e;
-      i &#x4e;
+      i.ico &#x4e;
+      i.ico &#x4e;
