--- a/app/client/modules/header/header.pug
+++ b/app/client/modules/header/header.pug
@@ -1,6 +1,6 @@
 header.header
   button(type="button" data-target-group="aside" data-target="menu").header__menu-btn.header__menu-btn_primary
-    i(style='font-size: 30px') &#x61;
+    i.ico(style='font-size: 30px') &#x61;
   .header__info
     .logo
       p.logo__name UN
@@ -10,4 +10,4 @@ header.header
       h4.header__subheader @hereIsId1239ddfv
   input(type="text").header__search
   button(type="button").header__menu-btn.header__menu-btn_secondary
-    i(style='font-size: 25px') &#x55;
+    i.ico(style='font-size: 25px') &#x55;
