--- a/app/client/pug/register.pug
+++ b/app/client/pug/register.pug
@@ -19,7 +19,7 @@ html(lang='en').wjs-MobileHeightFix
         .lang-switcher
           .lang-switcher__img-wrapper
             img.lang-switcher__img(src="../img/ukraine.png")
-          i &#x33;
+          i.ico &#x33;
           .lang-switcher__list
             .lang-switcher__list-item
               .lang-switcher__img-wrapper
